tests/ui/cached_size_attr_removed.stderr
error: `size` was renamed to `max_size`; use `max_size = ...`
 --> tests/ui/cached_size_attr_removed.rs:6:4
  |
6 | fn my_fn(x: u32) -> u32 {
  |    ^^^^^
